# bazel_for_arm

./: LICENSE  README.md
sample1/: BUILD  WORKSPACE  main.py
sample2/: BUILD
sample2/src/: main.c
sample3/: BUILD
sample3/inc/: main.h
sample3/src/: main.c  test.h
sample4/: .bazelrc  MODULE.bazel  deps.bzl  extensions.bzl
sample4/demo/: BUILD  linkerscript.ld  reset.S
sample4/test/: BUILD
sample4/toolchain/: toolchain.bzl
sample4/toolchain/archives/: BUILD  arm_none_eabi.bzl
sample4/toolchain/templates/: toolchain.bazel
sample5/: .bazelrc  README.md  WORKSPACE
sample5/demo/: BUILD  boot.S  cpu_main.c  linkscript.ld
sample5/platform/: BUILD
sample5/toolchain/: BUILD  aarch32_baremetal_toolchain.bzl  test_macro.bzl
