"""ARM cross compilation toolchains for bazel"""

module(
    name = "toolchains_arm_gnu",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9")

# DEV ONLY (not needed for release)
bazel_dep(name = "aspect_bazel_lib", version = "2.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)

arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain", dev_dependency = True)
arm_toolchain.arm_none_eabi()
use_repo(arm_toolchain, "arm_none_eabi")

register_toolchains(
    "@arm_none_eabi//toolchain:all",
    dev_dependency = True,
)
